--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
-	<link href="https://cdn.componentator.com/spa.min@16.css" rel="stylesheet" type="text/css" />
+	<link href="cdn/spa.min@16.css" rel="stylesheet" type="text/css" />
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-	<script src="https://cdn.componentator.com/spa.min@16.js"></script>
+	<script src="cdn/spa.min@16.js"></script>
 	<script>if (window.module) module = window.module;</script>
 	<style>
 		.m { margin-bottom: 10px; }
