--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		.body img { margin: 0 auto; display: block; }
 		.center { text-align: center }
 		h1 { text-align: center; margin: 20px 0 0; font-size: 18px; font-family: Arial; color: #A0A0A0; font-weight: normal; }
-		.link { font-size: 12px; color: #78ae4e; }
+		.link { font-size: 12px; }
 		.link i { margin-right: 5px; }
 		.button { background-color: #4285F4; border: 0; color: white; cursor: pointer; outline: 0; width: 100%; border-radius: 3px; height: 50px; text-transform: uppercase; font-family: Arial; }
 		.button:hover { box-shadow: 0 2px 5px rgba(0,0,0,0.1); opacity: 0.9; }
