--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
 		.app:hover { background-color: #F0F0F0; }
 		.app i { margin-right: 5px; }
 		.app > div { font-size: 11px; color: #A0A0A0; font-weight: normal; }
-		.app .fa-times { position: absolute; right: 5px; top: 17px; font-size: 12px; color: #A0A0A0; }
-		.app .fa-times:hover { color: red; }
+		.app > i { margin-right: 0; width: 15px; text-align: center; position: absolute; font-size: 12px; color: #A0A0A0; }
+		.app .fa-times-circle { right: 5px; top: 35px; }
+		.app .fa-times-circle:hover { color: red; }
+		.app .fa-chevron-up { right: 5px; top: 17px; }
+		.app .fa-chevron-up:hover { color: #4285F4; }
+		.app .fa-chevron-down { right: 5px; top: 53px; }
+		.app .fa-chevron-down:hover { color: #4285F4; }
 		.body img { margin: 0 auto; display: block; }
 		.center { text-align: center }
 		h1 { text-align: center; margin: 20px 0 0; font-size: 18px; font-family: Arial; color: #A0A0A0; font-weight: normal; }
@@ -45,7 +50,7 @@
 		<div data-bind="places__template">
 			<script type="text/html">
 				{{ foreach m in value }}
-					<div data-url="{{ m.url }}" data-index="{{ $index }}" class="app exec" data-exec="app/go"><i class="fa fa-times exec" data-exec="app/remove"></i>{{ m.name }}{{ if m.path }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ m.path }}</div>{{ fi }}<div><i class="fa fa-globe"></i>{{ m.url }}</div></div>
+					<div data-url="{{ m.url }}" data-index="{{ $index }}" class="app exec" data-exec="app/go"><i class="fa fa-chevron-up exec" data-exec="app/up"></i><i class="fa fa-chevron-down exec" data-exec="app/down"></i><i class="fa fa-times-circle exec" data-exec="app/remove"></i>{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div></div>
 				{{ end }}
 			</script>
 		</div>
@@ -66,11 +71,52 @@
 		CACHEPATH('places', '20 years');
 
 		PLUGIN('app', function(exports) {
+
+			exports.up = function(el, e) {
+
+				e.preventDefault();
+				e.stopPropagation();
+
+				el = el.closest('.app');
+
+				var index = +el.attrd('index');
+				var a = places[index];
+				var b = places[index - 1];
+
+				if (b == null)
+					return;
+
+				places[index] = b;
+				places[index - 1] = a;
+
+				BIND('places');
+			};
+
+			exports.down = function(el, e) {
+
+				e.preventDefault();
+				e.stopPropagation();
+
+				el = el.closest('.app');
+
+				var index = +el.attrd('index');
+				var a = places[index];
+				var b = places[index + 1];
+
+				if (b == null)
+					return;
+
+				places[index] = b;
+				places[index + 1] = a;
+
+				BIND('places');
+			};
+
 			exports.submit = function() {
 				SET('common.form', '');
 				codeform.created = NOW;
 				PUSH('places', codeform, true);
-				DEFAULT('codeform.*');
+				DEFAULT('codeform.*__{}');
 			};
 
 			exports.remove = function(el, e) {
