Added missing dependencies.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
 	<link href="cdn/spa.min@16.css" rel="stylesheet" type="text/css" />
+	<link href="cdn/ui.css" rel="stylesheet" type="text/css" />
 	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 	<script src="cdn/spa.min@16.js"></script>
+	<script src="cdn/ui.js"></script>
 	<script>if (window.module) module = window.module;</script>
 	<style>
 		.m { margin-bottom: 10px; }
@@ -56,7 +58,7 @@
 		</div>
 	</div>
 
-	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code;icon:laptop-code;default:codeform.*;width:300" class="hidden">
+	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code;icon:laptop-code;default:codeform.*;width:400" class="hidden">
 		<div data-jc-scope="codeform" class="padding">
 			<div data-jc="textbox__name__required:true__'Work'" class="m">Name</div>
 			<div data-jc="textbox__url__required:true;type:url__'https://'" class="m">URL address</div>
