--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code;icon:laptop-code;default:codeform.*;width:400" class="hidden">
+	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code;icon:laptop-code;default:codeform.*;width:400;autofocus:true" class="hidden">
 		<div data-jc-scope="codeform" class="padding">
 			<div data-jc="textbox__name__required:true__'Work'" class="m">Name</div>
 			<div data-jc="textbox__url__required:true;type:url__'https://'" class="m">URL address</div>
