--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Total.js Remote Code Editor</title>
+	<title>Total.js Code Editor</title>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=11" />
 	<meta name="format-detection" content="telephone=no" />
@@ -14,42 +14,60 @@
 	<script src="cdn/ui.js"></script>
 	<script>if (window.module) module = window.module;</script>
 	<style>
+		html,body { background-color: #202020; color: white; }
 		.m { margin-bottom: 10px; }
 		.padding { padding: 20px; }
-		.body { margin: 50px auto; max-width: 500px; width: 100%; }
-		.app { font-size: 18px; cursor: pointer; border-radius: 3px; padding: 10px 20px; font-weight: bold; position: relative; }
-		.app:hover { background-color: #F0F0F0; }
+		.link { color: #9AD959; }
+		.app { font-size: 18px; cursor: pointer; padding: 10px 20px; font-weight: bold; position: relative; width: 45%; display: inline-block; text-align: left; margin: 0 20px 10px; border-bottom: 1px solid #303030; }
+		.app:hover { background-color: #303030; }
 		.app i { margin-right: 5px; }
-		.app > div { font-size: 11px; color: #A0A0A0; font-weight: normal; }
+		.app > div { font-size: 11px; color: gray; font-weight: normal; }
 		.app > i { margin-right: 0; width: 15px; text-align: center; position: absolute; font-size: 12px; color: #A0A0A0; }
-		.app .fa-times-circle { right: 5px; top: 35px; }
+		.app .fa-times-circle { right: 15px; top: 35px; color: #9B5F5F; }
 		.app .fa-times-circle:hover { color: red; }
-		.app .fa-chevron-up { right: 5px; top: 17px; }
-		.app .fa-chevron-up:hover { color: #4285F4; }
-		.app .fa-chevron-down { right: 5px; top: 53px; }
-		.app .fa-chevron-down:hover { color: #4285F4; }
+		.app .fa-chevron-up { right: 15px; top: 17px; }
+		.app .fa-chevron-up:hover { color: #9AD959; }
+		.app .fa-chevron-down { right: 15px; top: 53px; }
+		.app .fa-chevron-down:hover { color: #9AD959; }
 		.body img { margin: 0 auto; display: block; }
 		.center { text-align: center }
-		h1 { text-align: center; margin: 20px 0 0; font-size: 18px; font-family: Arial; color: #A0A0A0; font-weight: normal; }
+		h1 { text-align: center; margin: 20px 0 0; font-size: 24px; font-family: Arial; color: white; font-weight: normal; font-weight: normal; }
 		.link { font-size: 12px; }
 		.link i { margin-right: 5px; }
-		.button { background-color: #4285F4; border: 0; color: white; cursor: pointer; outline: 0; width: 100%; border-radius: 3px; height: 50px; text-transform: uppercase; font-family: Arial; }
+		.button { background-color: #9AD959; border: 0; color: white; cursor: pointer; outline: 0; width: 100%; border-radius: 3px; height: 50px; text-transform: uppercase; font-family: Arial; }
 		.button:hover { box-shadow: 0 2px 5px rgba(0,0,0,0.1); opacity: 0.9; }
-		.button:disabled { background-color: #E0E0E0; color: silver; cursor: not-allowed; box-shadow: none; opacity: 1; }
+		.button:disabled { background-color: #303030; color: silver; cursor: not-allowed; box-shadow: none; opacity: 1; }
 		.button .fa, .button .fal, .button .far { margin-right: 5px; }
 		.button-small { height: 32px; font-size: 12px; }
 		.b { font-weight: bold; }
 		.m { margin-bottom: 20px; }
+		hr { border-color: #404040; }
+		body { user-select: none; -webkit-user-select: none; -webkit-app-region: drag; }
+		.center { text-align: center; }
+
+		@media(min-width: 980px) {
+			.apps { margin-left: 25px; }
+		}
+
+		@media(max-width: 980px) {
+			.app { display: block; width: 100%; }
+		}
+
 	</style>
 </head>
-<body data-jc="exec">
+<body data-jc="exec" class="ui-dark">
 
-	<div class="body">
-		<img src="icon.png" width="150" />
-		<h1>Total.js Remote Code Editor</h1>
-		<div class="center"><span class="link exec" data-path="common.form" data-value="'add'"><i class="fa fa-plus-circle"></i>Add Remote Code</span></div>
-		<hr />
-		<div data-bind="places__template">
+	<div class="container">
+		<br />
+		<br />
+		<div class="center">
+			<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="150" alt="Total.js Code" border="0" /></a>
+		</div>
+
+		<h1>Total.js <b>Code Editor</b></h1>
+		<div class="center"><span class="link exec" data-path="common.form" data-value="'add'"><i class="fa fa-plus-circle"></i>Add Code Editor</span></div>
+		<hr style="border-style:dashed;margin:30px 0" />
+		<div data-bind="places__template" class="apps">
 			<script type="text/html">
 				{{ foreach m in value }}
 					<div data-url="{{ m.url }}" data-index="{{ $index }}" class="app exec" data-exec="app/go"><i class="fa fa-chevron-up exec" data-exec="app/up"></i><i class="fa fa-chevron-down exec" data-exec="app/down"></i><i class="fa fa-times-circle exec" data-exec="app/remove"></i>{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div></div>
@@ -58,7 +76,7 @@
 		</div>
 	</div>
 
-	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code;icon:laptop-code;default:codeform.*;width:400;autofocus:true" class="hidden">
+	<div data-jc="panel__common.form__if:add;bg:true;title:Add Code Editor;icon:laptop-code;default:codeform.*;width:400;autofocus:true" class="hidden">
 		<div data-jc-scope="codeform" class="padding">
 			<div data-jc="textbox__name__required:true__'Work'" class="m">Name</div>
 			<div data-jc="textbox__url__required:true;type:url__'https://'" class="m">URL address</div>
