--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body data---="exec" class="ui-dark" data-bind="darkmode__.ui-dark:value||value==null">
 
 	<div class="darkmode">
-		<div data---="togglebutton__darkmode__icontrue:moon"></div>
+		<div data---="togglebutton__darkmode__icontrue:moon;iconfalse:sun"></div>
 	</div>
 
 	<div class="container">
