--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 	<meta name="robots" content="all,follow" />
 	<link href="cdn/spa.min@16.css" rel="stylesheet" type="text/css" />
 	<link href="cdn/ui.css" rel="stylesheet" type="text/css" />
-	<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+	<script>if (typeof(module)==='object'){window.module=module;module=undefined}</script>
 	<script src="cdn/spa.min@17.js"></script>
 	<script src="cdn/ui.js"></script>
-	<script>if (window.module) module = window.module;</script>
+	<script>if(window.module)module=window.module;</script>
 	<style>
-		html,body { background-color: white; color: black; height: 100%; }
+		html,body { background-color: white; color: black; height: 100%; margin: 0; padding: 0; }
 		.m { margin-bottom: 10px; }
 		.padding { padding: 20px; }
 		.link { color: #80B44A; }
 		.ui-dark .link { color: #9AD959; }
-		.app { font-size: 18px; cursor: pointer; padding: 10px 20px; font-weight: bold; position: relative; width: 45%; display: inline-block; text-align: left; margin: 0 20px 10px; border-bottom: 1px solid #E0E0E0; }
-		.app:hover { background-color: rgba(100,100,100,0.1); }
-		.app i { margin-right: 5px; }
-		.app > div { font-size: 11px; color: gray; font-weight: normal; }
-		.app > i { margin-right: 0; width: 15px; text-align: center; position: absolute; font-size: 12px; color: gray; }
+		.app { font-size: 18px; cursor: pointer; font-weight: bold; position: relative; width: 33%; display: inline-block; text-align: left; margin-bottom: 10px; padding: 5px; border-radius: 2px; text-align: left; }
+		.appbody { padding: 10px 20px; background-color: rgba(0,0,0,0.05); border-radius: 2px; }
+		.app:hover { background-color: rgba(100,100,100,0.03); }
+		.ui-dark .appbody { background-color: rgba(120,120,120,0.05); }
+		.ui-dark .app:hover { background-color: rgba(200,200,200,0.05); }
+		.appbody i { margin-right: 5px; }
+		.appbody > div { font-size: 11px; color: gray; font-weight: normal; }
+		.appbody > i { margin-right: 0; width: 15px; text-align: center; position: absolute; font-size: 12px; color: gray; }
 		.app .fa-pencil { right: 35px; top: 35px; }
 		.app .fa-pencil:hover { color: #9AD959; }
 		.app .fa-times-circle { right: 15px; top: 35px; color: #9B5F5F; }
@@ -53,10 +56,8 @@
 		body { user-select: none; -webkit-user-select: none; -webkit-app-region: drag; }
 		.center { text-align: center; }
 		.darkmode { position: fixed; right: 20px; top: 20px; }
-
-		@media(min-width: 980px) {
-			.apps { margin-left: 25px; }
-		}
+		.apps { margin-left: 5px; }
+		.maxwidth { max-width: 1400px; margin: 0 auto; }
 
 		@media(max-width: 980px) {
 			.app { display: block; width: 100%; }
@@ -70,7 +71,7 @@
 		<div data---="togglebutton__darkmode__icontrue:moon;iconfalse:sun"></div>
 	</div>
 
-	<div class="container">
+	<div class="maxwidth">
 		<br />
 		<br />
 		<div class="center">
@@ -83,10 +84,13 @@
 		<div data-bind="places__template" class="apps">
 			<script type="text/html">
 				{{ foreach m in value }}
-					<div data-url="{{ m.url }}" data-index="{{ $index }}" class="app exec" data-exec="app/go"><i class="fa fa-chevron-up exec" data-exec="app/up"></i><i class="fa fa-chevron-down exec" data-exec="app/down"></i><i class="fa fa-times-circle exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div></div>
+					<div data-url="{{ m.url }}" data-index="{{ $index }}" class="app exec" data-exec="app/go"><div class="appbody"><i class="fa fa-chevron-up exec" data-exec="app/up"></i><i class="fa fa-chevron-down exec" data-exec="app/down"></i><i class="fa fa-times-circle exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div></div></div>
 				{{ end }}
 			</script>
 		</div>
+		<br />
+		<br />
+		<br />
 	</div>
 
 	<div data---="panel__common.form__if:add;bg:true;title:Total.js Code Editor;icon:laptop-code;default:codeform.*;width:400;autofocus:true" class="hidden">
