--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		.darkmode { position: fixed; right: 20px; top: 20px; }
 		.apps { margin-left: 5px; }
 		.maxwidth { max-width: 1400px; margin: 0 auto; }
+		.movable { -webkit-user-select:none; -webkit-app-region:drag; }
 
 		@media(max-width: 980px) {
 			.app { display: block; width: 100%; }
@@ -68,7 +69,7 @@
 	</div>
 
 	<div class="maxwidth">
-		<div style="-webkit-user-select:none-webkit-app-region:drag">
+		<div class="movable">
 			<br />
 			<br />
 			<div class="center">
@@ -88,7 +89,7 @@
 				</script>
 			</div>
 		</div>
-		<div style="-webkit-user-select:none;-webkit-app-region:drag">
+		<div class="movable">
 			<br />
 			<br />
 			<br />
