--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
 			<div class="center">
 				<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="150" alt="Total.js Code" border="0" /></a>
 			</div>
-
-			<h1>Total.js <b>Code Editor</b></h1>
-			<div class="center"><span class="link exec" data-path="common.form" data-value="'add'"><i class="fa fa-plus-circle"></i>Add Code Editor</span></div>
+			<h1>Total.js <b>Code Editor Online</b></h1>
+			<div class="center"><span class="link exec" data-path="common.form" data-value="'add'"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span></div>
 			<hr style="border-style:dashed;margin:30px 0" />
 		</div>
 		<div data---="movable__null__selector:.app;exec:app/sort">
@@ -93,6 +92,15 @@
 			<br />
 			<br />
 			<br />
+		</div>
+	</div>
+
+	<div data---="panel__common.form__if:codeformexport;bg:true;title:Export/Import;icon:cloud;width:400;autofocus:true" class="hidden">
+		<div data-scope="codeformexport" class="padding">
+			<div data---="textarea__?.data__required:true;height:500" class="m">Data</div>
+			<div data---="validation__?">
+				<button name="submit" disabled="disabled" class="exec button button-small b" data-exec="app/import"><i class="fa fa-cloud-download"></i>Import</button>
+			</div>
 		</div>
 	</div>
 
@@ -136,6 +144,34 @@
 				places[index - 1] = a;
 
 				UPD('places');
+			};
+
+			exports.export = function() {
+				SETR('codeformexport.data', places.length ? ENCRYPT(places, 'totaljscode') : '');
+				SET('common.form', 'codeformexport');
+			};
+
+			exports.import = function() {
+				var data = DECRYPT(codeformexport.data, 'totaljscode');
+				if (!data) {
+					INVALID('codeformexport.data');
+					return;
+				}
+				var is = false;
+				for (var i = 0; i < data.length; i++) {
+					var item = data[i];
+					if (!item || !item.url || !item.name)
+						continue;
+					var record = places.findItem('url', item.url);
+					if (record == null) {
+						item.created = new Date();
+						item.updated = undefined;
+						places.push(item);
+						is = true;
+					}
+				}
+				is && UPDATE('places');
+				NULL('common.form');
 			};
 
 			exports.down = function(el, e) {
@@ -205,6 +241,29 @@
 				location.href = el.attrd('url');
 			};
 		});
+
+		W.DECRYPT = function(hex, key) {
+			var index = hex.lastIndexOf('x');
+			if (index === -1)
+				return;
+			var hash = +hex.substring(index + 1);
+			var o = hex.substring(0, index);
+			if (HASH(o + (key || ''), true) === hash) {
+				o = decodeURIComponent(o.replace(/(..)/g, '%$1'));
+				var c = o.charAt(0);
+				return c === '[' || c === '{' || c === '"' ? PARSE(o) : o;
+			}
+		};
+
+		W.ENCRYPT = function(str, key) {
+			if (typeof(str) === 'object')
+				str = STRINGIFY(str);
+			var arr = unescape(encodeURIComponent(str)).split('');
+			for (var i = 0; i < arr.length; i++)
+				arr[i] = arr[i].charCodeAt(0).toString(16);
+			var o = arr.join('');
+			return o + 'x' + HASH(o + (key || ''), true);
+		};
 
 	</script>
 
