--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 	<meta name="format-detection" content="telephone=no" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="robots" content="all,follow" />
-	<link href="cdn/spa.min@16.css" rel="stylesheet" type="text/css" />
+	<link href="cdn/spa.min@18.css" rel="stylesheet" type="text/css" />
 	<link href="cdn/ui.css" rel="stylesheet" type="text/css" />
-	<script>if (typeof(module)==='object'){window.module=module;module=undefined}</script>
-	<script src="cdn/spa.min@17.js"></script>
+	<script>if (typeof(window.module)==='object'){window.module=module;module=undefined}</script>
+	<script src="cdn/spa.min@18.js"></script>
 	<script src="cdn/ui.js"></script>
-	<script>if(window.module)module=window.module;</script>
+	<script>if(W.module)module=W.module;</script>
 	<style>
-		html,body { background-color: white; color: black; height: 100%; margin: 0; padding: 0; }
+		html,body { background-color: white; color: black; height: 100%; margin: 0; padding: 0; overflow: hidden; }
 		.m { margin-bottom: 10px; }
 		.padding { padding: 20px; }
 		.link { color: #80B44A; }
 		.ui-dark .link { color: #9AD959; }
 		.app { font-size: 18px; cursor: pointer; font-weight: bold; position: relative; width: 33%; display: inline-block; text-align: left; margin-bottom: 10px; padding: 5px; border-radius: 2px; text-align: left; }
-		.appbody { padding: 10px 20px; background-color: rgba(0,0,0,0.05); border-radius: 2px; }
+		.app span { color: #80B44A; margin-right: 8px; }
+		.disabled { opacity: 0.5; cursor: not-allowed;; }
+		.ui-dark .app span { color: #9AD959; }
+		.appbody { padding: 10px 20px 0; background-color: rgba(0,0,0,0.05); border-radius: 2px; height: 100px; }
 		.app:hover { background-color: rgba(100,100,100,0.03); }
 		.ui-dark .appbody { background-color: rgba(120,120,120,0.05); }
 		.ui-dark .app:hover { background-color: rgba(200,200,200,0.05); }
@@ -48,7 +51,7 @@
 		.b { font-weight: bold; }
 		.m { margin-bottom: 20px; }
 		hr { border-color: #E0E0E0; }
-		.ui-dark hr { border-color: #404040; }
+		.ui-dark hr { border-color: #363636; }
 		body { user-select: none; }
 		.center { text-align: center; }
 		.darkmode { position: fixed; right: 20px; top: 20px; }
@@ -64,6 +67,9 @@
 </head>
 <body data---="exec" class="ui-dark" data-bind="darkmode__.ui-dark:value||value==null">
 
+	<div data---="directory"></div>
+	<div data---="message"></div>
+
 	<div class="darkmode">
 		<div data---="togglebutton__darkmode__icontrue:moon;iconfalse:sun"></div>
 	</div>
@@ -73,49 +79,94 @@
 			<br />
 			<br />
 			<div class="center">
-				<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="150" alt="Total.js Code" border="0" /></a>
+				<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="100" alt="Total.js Code" border="0" /></a>
 			</div>
 			<h1>Total.js <b>Code Editor Online</b></h1>
-			<div class="center"><span class="link exec" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span></div>
-			<hr style="border-style:dashed;margin:30px 0" />
+			<div class="center"><span class="link exec b" data-exec="app/search"><i class="fa fa-search"></i>Search Code Editor</span> &nbsp; <span class="link exec" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span> &nbsp; <span class="link exec" data-exec="app/cloudimport"><i class="fa fa-cloud"></i>Import from Total.js Cloud</span></div>
 		</div>
-		<div data---="movable__null__selector:.app;exec:app/sort">
-			<div data-bind="places__template" class="apps">
-				<script type="text/html">
-					{{ foreach m in value }}
-						<div data-url="{{ m.url }}" draggable="true" data-index="{{ $index }}" class="app exec" data-exec="app/go"><div class="appbody"><i class="fa fa-times-circle exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div></div></div>
-					{{ end }}
-				</script>
+	</div>
+	<hr style="margin:30px 0 0" />
+
+	<div data---="viewbox__null__parent:window;margin:246;scrollbar:1">
+		<div class="maxwidth">
+			<br />
+			<br />
+			<div data---="movable__null__selector:.app;exec:app/sort">
+				<div data-bind="places__template__changes__exec:app/status" class="apps">
+					<script type="text/html">
+						{{ foreach m in value }}
+							<div data-url="{{ m.url }}" draggable="true" data-index="{{ $index }}" class="app exec{{ if m.disabled }} disabled{{ fi }}" data-exec="app/go"><div class="appbody"><i class="fa fa-times-circle exec" data-exec="app/remove"></i><i class="fa fa-pencil exec" data-exec="app/edit"></i>{{ m.url | cloudicon }}{{ m.name }}<div style="margin-top:5px"><i class="fa fa-folder"></i>{{ if m.path }}{{ m.path }}{{ else }}No local path{{ fi }}</div><div><i class="fa fa-globe"></i>{{ m.url }}</div><div class="version" data-url="{{ m.url }}"><i class="far fa-circle"></i>---</div></div></div>
+						{{ end }}
+					</script>
+				</div>
 			</div>
-		</div>
-		<div class="movable">
-			<br />
-			<br />
-			<br />
+			<div class="movable">
+				<br />
+				<br />
+				<br />
+			</div>
 		</div>
 	</div>
 
-	<div data---="panel__common.form__if:codeformexport;bg:true;title:Export/Import;icon:cloud;width:400;autofocus:true" class="hidden">
-		<div data-scope="codeformexport" class="padding">
-			<div data---="textarea__?.data__required:true;height:500" class="m">Data</div>
-			<div data---="validation__?">
-				<button name="submit" disabled="disabled" class="exec button button-small b" data-exec="app/import"><i class="fa fa-cloud-download"></i>Import</button>
+	<div data---="form__common.form__if:codeformexport;bg:true;title:Export/Import;icon:cloud;width:600;autofocus:true;submit:app/import" class="hidden" data-scope="codeformexport">
+		<script type="text/html">
+			<div class="padding">
+				<div data---="textarea__?.data__required:true;height:500">Data</div>
 			</div>
-		</div>
+			<nav data---="validation__?">
+				<button name="submit" disabled="disabled"><i class="fa fa-cloud-download"></i> IMPORT</button>
+				<button name="cancel">Cancel</button>
+			</nav>
+		</script>
 	</div>
 
-	<div data---="panel__common.form__if:add;bg:true;title:Total.js Code Editor;icon:laptop-code;width:400;autofocus:true" class="hidden">
-		<div data-scope="codeform" class="padding">
-			<div data---="textbox__?.name__required:true__'Work'" class="m">Name</div>
-			<div data---="textbox__?.url__required:true;type:url__'https://'" class="m">URL address</div>
-			<div data---="textbox__?.path__placeholder:/desktop/git/__''" class="m">Path to repositories</div>
-			<div data---="validation__?">
-				<button name="submit" disabled="disabled" class="exec button button-small b" data-exec="app/submit"><i class="fa fa-floppy-o"></i>Save</button>
+	<div data---="form__common.form__if:add;bg:true;title:Code Editor;icon:laptop-code;width:600;autofocus:true;submit:app/submit" class="hidden" data-scope="codeform">
+		<script type="text/html">
+			<div class="padding">
+				<div data---="input__?.name__required:true;malength:40__'Work'">Name</div>
+				<div class="help m">Enter name of Code Editor instance</div>
+				<div data---="input__?.url__required:true;type:url__'https://'">URL address</div>
+				<div class="help m"><i class="fa fa-globe"></i>Enter URL address to Total.js Code Editor</div>
+				<div data---="input__?.path__placeholder:/desktop/git/__''">Path to repositories</div>
+				<div class="help">Code Electron will synchronize modified files locally.</div>
 			</div>
-		</div>
+			<nav data---="validation__?">
+				<button name="submit" disabled="disabled"><i class="fa fa-floppy-o"></i> SAVE</button>
+				<button name="cancel">Cancel</button>
+			</nav>
+		</script>
+	</div>
+
+	<div data---="form__common.form__if:cloudimport;bg:true;title:Cloud import;icon:cloud;width:600;autofocus:true;submit:app/cloudimportsubmit" class="hidden" data-scope="cloudimport">
+		<script type="text/html">
+			<div class="padding">
+				<div data---="input__?.token__required:true__''">Access Token</div>
+				<div class="help m">You can obtain in Payments section on <a href="https://platform.totaljs.com?open=payments" target="_blank">https://platform.totaljs.com</a>.</div>
+				<div data---="input__?.path__placeholder:/desktop/git/__''">Path to repositories</div>
+			</div>
+			<nav data---="validation__?">
+				<button name="submit" disabled="disabled"><i class="fa fa-cloud-download"></i> IMPORT</button>
+				<button name="cancel">Cancel</button>
+			</nav>
+		</script>
 	</div>
 
 	<script>
+
+		var places = [];
+
+		ON('ready', function() {
+			var myuid = CACHE('uid');
+			if (!myuid) {
+				var ua = MAIN.ua;
+				ua.uid = GUID(10);
+				ua.version = '1.0.0';
+				myuid = JSON.stringify(ua);
+				CACHE('uid', myuid, '20 years');
+			}
+
+			AJAX('POST https://visitors.trackomator.com/track/code/', PARSE(myuid));
+		});
 
 		CACHEPATH('darkmode', '20 years');
 		CACHEPATH('places', '20 years');
@@ -143,17 +194,22 @@
 				places[index] = b;
 				places[index - 1] = a;
 
-				UPD('places');
+				REWRITE2('places', places);
 			};
 
 			exports.export = function() {
-				SETR('codeformexport.data', places.length ? ENCRYPT(places, 'totaljscode') : '');
+				SETR('codeformexport.data', places && places.length ? ENCRYPT(places, 'totaljscode') : '');
 				SET('common.form', 'codeformexport');
 			};
 
 			exports.create = function() {
 				SET('common.form', 'add');
-				SETR('codeform', {}, 200);
+				DEFAULT('codeform__{}');
+			};
+
+			exports.cloudimport = function() {
+				SET('common.form', 'cloudimport');
+				DEFAULT('cloudimport__{}');
 			};
 
 			exports.import = function() {
@@ -167,7 +223,7 @@
 					var item = data[i];
 					if (!item || !item.url || !item.name)
 						continue;
-					var record = places.findItem('url', item.url);
+					var record = places ? places.findItem('url', item.url) : null;
 					if (record == null) {
 						item.created = new Date();
 						item.updated = undefined;
@@ -196,7 +252,43 @@
 				places[index] = b;
 				places[index + 1] = a;
 
-				UPD('places');
+				REWRITE2('places', places);
+			};
+
+			exports.cloudimportsubmit = function() {
+				AJAX('GET https://opcloud.totaljs.cloud/api/usertoken/?token=' + cloudimport.token, function(data) {
+
+					if (data && data[0] && data[0].error) {
+						FUNC.messageresponse()(data);
+						NULL('common.form');
+						return;
+					}
+
+					var is = false;
+
+					for (var i = 0; i < data.length; i++) {
+						var item = data[i];
+						if (!item || !item.url || !item.name)
+							continue;
+
+						item.url = 'https://' + item.url;
+						var record = places ? places.findItem('url', item.url) : null;
+						if (record == null) {
+							item.path = cloudimport.path || '';
+							item.created = new Date();
+							item.updated = undefined;
+							places.push(item);
+							is = true;
+						}
+					}
+
+					if (is) {
+						UPDATE('places');
+						setTimeout(exports.status, 500);
+					}
+
+					NULL('common.form');
+				});
 			};
 
 			exports.sort = function(list) {
@@ -208,7 +300,7 @@
 					arr.push(item);
 				}
 				places = arr;
-				UPD('places');
+				REWRITE2('places', places);
 			};
 
 			exports.submit = function() {
@@ -235,17 +327,69 @@
 			exports.remove = function(el, e) {
 				e.stopPropagation();
 				e.preventDefault();
-				var index = +el.closest('.app').attrd('index');
+				var container = el.closest('.app');
+				var index = +container.attrd('index');
 				places.splice(index, 1);
-				UPD('places');
+				container.remove();
+				REWRITE2('places', places);
 			};
 
 			exports.go = function(el) {
+
+				if (el.hclass('disabled'))
+					return;
+
 				var project = places[+el.attrd('index')];
 				project.path && require('electron').ipcRenderer.send('setPath', { url: project.url, path: project.path });
 				location.href = el.attrd('url');
 			};
+
+			exports.search = function(el) {
+				var opt = {};
+				opt.element = el;
+				opt.items = places || EMPTYARRAY;
+				opt.placeholder = 'Search';
+				opt.callback = function(value) {
+					location.href = value.url;
+				};
+				SETTER('directory/show', opt);
+			};
+
+			exports.status = function() {
+				var arr = $('.version').toArray();
+				arr.wait(function(el, next) {
+					el = $(el);
+
+					if (el.html().indexOf('---') === -1) {
+						next();
+						return;
+					}
+
+					var url = el.attrd('url');
+
+					if (url.charAt(url.length - 1) === '/')
+						url = url.substring(0, url.length - 1);
+
+					AJAX('GET ' + url + '/ping/', function(response) {
+						var version = typeof(response) === 'object' ? response.version : '';
+						if (!version && response.indexOf('/js/cdn.min.js') !== -1)
+							version = '<i>outdated</i>';
+
+						var place = places.findItem('url', el.attrd('url'));
+						place.disabled = !version;
+
+						el.closest('.app').tclass('disabled', !version);
+						el.html(version ? ('<i class="fa fa-circle green"></i>Version: <b>' + version + '</b>') : '<i class="far fa-circle red"></i><span class="red">Offline</span>');
+						next();
+					});
+				}, 5);
+			};
+
 		});
+
+		Thelpers.cloudicon = function(val) {
+			return val.indexOf('totaljs.cloud') === -1 ? '' : '<span class="fa fa-cloud"></span>';
+		};
 
 		W.DECRYPT = function(hex, key) {
 			var index = hex.lastIndexOf('x');
