--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		body { user-select: none; }
 		.center { text-align: center; }
 		.darkmode { position: fixed; right: 20px; top: 20px; }
-		.apps { margin-left: 5px; }
+		.apps { margin-left: 5px; padding: 0 20px; }
 		.maxwidth { max-width: 1400px; margin: 0 auto; }
 		.movable { -webkit-user-select:none; -webkit-app-region:drag; }
 
