Optimized for the new version of Electron.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<a href="https://www.totaljs.com" target="_blank"><img src="icon.png" width="100" alt="Total.js Code" border="0" /></a>
 			</div>
 			<h1>Total.js <b>Code Editor Online</b></h1>
-			<div class="center"><span class="link exec b" data-exec="app/search"><i class="fa fa-search"></i>Search Code Editor</span> &nbsp; <span class="link exec" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span> &nbsp; <span class="link exec" data-exec="app/cloudimport"><i class="fa fa-cloud"></i>Import from Total.js Cloud</span></div>
+			<div class="center"><span class="link exec b" data-exec="app/search"><i class="fa fa-search"></i>Search Code Editor</span> &nbsp; <span class="link exec" data-exec="app/create"><i class="fa fa-plus-circle"></i>Add Code Editor</span> &nbsp; <span class="link exec" data-exec="app/export"><i class="fa fa-cloud-upload"></i>Export &amp; Import</span></div>
 		</div>
 	</div>
 	<hr style="margin:30px 0 0" />
@@ -154,6 +154,7 @@
 	<script>
 
 		var places = [];
+		var Electron = require('electron');
 
 		ON('ready', function() {
 			var myuid = CACHE('uid');
@@ -171,7 +172,12 @@
 		CACHEPATH('darkmode', '20 years');
 		CACHEPATH('places', '20 years');
 
-		require('electron').remote.getGlobal('META').url = location.href;
+		// require('electron').remote.getGlobal('META').url = location.href;
+
+		if (Electron.remote)
+			Electron.remote.META.url = location.href;
+		else
+			Electron.ipcRenderer.sendSync('setUrl', location.href);
 
 		PLUGIN('app', function(exports) {
 
