--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		.app span { color: #80B44A; margin-right: 8px; }
 		.disabled { opacity: 0.5; cursor: not-allowed;; }
 		.ui-dark .app span { color: #9AD959; }
-		.appbody { padding: 10px 20px 0; background-color: rgba(0,0,0,0.05); border-radius: 2px; height: 100px; }
-		.app:hover { background-color: rgba(100,100,100,0.03); }
+		.appbody { padding: 10px 20px 0; background-color: rgba(0,0,0,0.05); border-radius: var(--radius); height: 100px; }
+		.appbody:hover { opacity: 0.8; }
 		.ui-dark .appbody { background-color: rgba(120,120,120,0.05); }
 		.ui-dark .app:hover { background-color: rgba(200,200,200,0.05); }
 		.appbody i { margin-right: 5px; }
